--- a/local.yml
+++ b/local.yml
@@ -17,3 +17,4 @@
     - import_tasks: tasks/nvim.yml
     - import_tasks: tasks/productivity-tools.yml
     - import_tasks: tasks/nvim-config.yml
+    - import_tasks: tasks/brave.yml
